# hpl

./: .fallowrc.json  .gitignore  .oxfmtrc.json  .oxlintrc.json  .pre-commit-config.yaml  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.github/workflows/: fallow.yml
.hl/: journal.jsonl
.hl/ir/: greeting.yaml
.hl/ml/: greeting.ml
.napl/: map.json
.napl/attribution/: greeting.yaml
apps/vscode/: .vscodeignore  build.mjs  human-language-0.1.0.vsix  napl-0.1.0.vsix  package.json
conformance/fake-claude/: fake-agent
conformance/scenarios/: 01-init-fresh.yaml  60-gen-blocked-by-drift.yaml  70-gen-custom-adapter.yaml  71-agent-invalid-preset.yaml  72-reconcile-drift.yaml  73-reconcile-nothing.yaml  80-watch-once.yaml
docs/: DESIGN.md  oxc-study.md  selfhost-map.md  selfhost.md
docs/specs/: 2026-07-24-ai-harness-tooling-design.md  2026-07-24-napl-ast-docs-design.md  2026-07-24-napl-ast-docs-plan.md  2026-07-24-tutorial-local-llm-design.md  2026-07-25-remove-frontmatter-tests-plan.md
editor/vscode/: human-language-0.1.0.vsix
examples/todo-app/: todo-app.hl
rust/: README.md
rust/fixtures/: blame_cases.json  schema_cases.json
rust/napl-wasm/: Cargo.toml
rust/napl-wasm/src/: lib.rs
scripts/: check-content.ts
selfhost/: schemas_journal.napl
selfhost/.napl/: journal.jsonl  map.json
selfhost/cli/: driftdetect_io.napl  healing_io.napl  (+5 more)
src/: cli.ts
test/: blame-command.test.ts  blame.test.ts  gen-journal.test.ts  gen.test.ts  journal.test.ts  ml-lsp.test.ts  ml-schema.test.ts
(+208 files in other folders)
